<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Seledaye</string>
    <string name="title_home">Home</string>
    <string name="me">My</string>
    <string name="course_name">Course Name</string>
    <string name="course_code">Course Code</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="credit_hour_ects_cts" tools:ignore="MissingTranslation" translatable="false">Credit Hour (ECTS/CTS)</string>
    <string name="empty_course_desc">"No Course Press \"+\" to add new course "</string>
    <string name="empty_examtask_desc">No Exam/Task \n Press \"+\" to add new Exam/Task </string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="name">Name (* Required)</string>
    <string name="saved">Saved</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="examtask_title">Exam/Task</string>
    <string name="new_exam">New Exam</string>
    <string name="new_task">New Task</string>
    <string name="update">Update</string>
    <string name="language">Language</string>
    <string name="themes">App theme</string>
    <string name="automate_mode" tools:ignore="MissingTranslation" translatable="false">Auto-mute mode</string>
    <string name="lesson_notification">Lesson notification</string>
    <string name="task_notification">Task notification</string>
    <string name="exam_notification">Exam notification</string>
    <string name="select_course">Select course</string>
    <string name="automate_no_picker_format">%d minute</string>
    <string name="cancel">Cancel</string>
    <string name="notify_me_before">Notify me before</string>
    <string name="lesson_notif_ticker_txt">You have %S class on %s</string>
    <string name="noting_happening_today">Noting happening</string>
    <string name="empty_grade_info">No Saved Grade \n press "+" to calculate your grade</string>
    <string name="empty_course_gpa">No course\nadd your courses frist</string>
    <string name="qr_code_hint">Tap share my timetable from your friend\'s phone and scan the QRCode and follow the steps</string>
    <string name="me_id" translatable="false">ca-app-pub-2301026347150212/9887561750</string>
    <string name="home_id" translatable="false">ca-app-pub-2301026347150212/3875238046</string>
    <string name="grant_notif_permision">Grant Notification Permission !</string>
    <string name="notif_granted">Notification Granted</string>
    <string name="share_timetable">Share timetable</string>
    <string name="courses">Courses</string>
    <string name="upcoming_exam_task">Upcoming Exam/Task</string>
    <string name="add_new_exam_task">Add New Exam/Task</string>
    <string name="edit_course">Edit Course</string>
    <string name="name_topic">Name/Topic</string>
    <string name="description">Description</string>
    <string name="add_to_my_course">Add to my Course</string>
    <string name="task_completed">Task Completed</string>
    <string name="grade_list_toolbar_title">Grade List</string>
    <string name="settings">Settings</string>
    <string name="gpa_calculator">Gpa Calculator</string>
    <string name="my_courses">My Courses</string>
    <string name="exam_task">Exam/Task</string>
    <string name="qr_share_desc">Tap share my timetable from your friend\'s phone and scan the QRCode and follow the steps</string>
    <string name="timetable_setting">Timetable setting</string>
    <string name="share_my_timetable">Share my timetable</string>
    <string name="import_timetable">Import timetable</string>
    <string name="timetable_settings">Timetable settings</string>
    <string name="lesson_data">Lesson data</string>
    <string name="course_data">Course data</string>
    <string name="scanning">Scanning…</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="advanced_setting">Advanced setting</string>
    <string name="delete_all_course_summery">Delete all your courses</string>
    <string name="delete_all_course">Delete all courses</string>
    <string name="delete_all_lesson_summery">Delete all lessons from your timetable</string>
    <string name="delete_all_lesson">Delete All Lesson</string>
    <string name="delete_exam_task">Delete all exam and task</string>
    <string name="delete_examtask_summery">Delete all task and exams</string>
    <string name="reset_app_setting">Reset app settings</string>
    <string name="reset_app_setting_summery">Restore app setting to default. does not delete your data but may affect your timetable</string>
    <string name="clear_catch">Clear cache</string>
    <string name="automute_summery">Silent device during lesson</string>
    <string name="time_before">Time Before</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="push_notification">Push notification</string>
    <string name="push_notification_summery_on">you can receive push notifications from the app</string>
    <string name="push_notification_summery_off">you can not receive push notifications from the app</string>
    <string name="lesson_notification_summery_off">you can not receive lesson notifications</string>
    <string name="lesson_notification_summery_on">app notify\'s you when you have class</string>
    <string name="task_notification_summery_off">you can not receive upcoming task notifications</string>
    <string name="task_notification_summery_on">app notify\'s you for upcoming tasks</string>
    <string name="exam_notification_summery_off">you can not receive exam notifications</string>
    <string name="exam_notification_summery_on">app notify\'s you for upcoming exams</string>
    <string name="notification_time">Notification time</string>
    <string name="timetable">Timetable</string>
    <string name="lesson_days">Lesson Days</string>
    <string name="lesson_per_day">Lesson per day</string>
    <string name="lesson_duration">Lesson duration</string>
    <string name="lesson_gap">Lesson gap / break</string>
    <string name="lesson1">Lesson 1</string>
    <string name="lesson2">Lesson 2</string>
    <string name="lesson3">Lesson 3</string>
    <string name="lesson4">Lesson 4</string>
    <string name="lesson5">Lesson 5</string>
    <string name="lesson6">Lesson 6</string>
    <string name="lesson7">Lesson 7</string>
    <string name="lesson8">Lesson 8</string>
    <string name="lesson9">Lesson 9</string>
    <string name="lesson10">Lesson 10</string>
    <string name="lesson11">Lesson 11</string>
    <string name="lesson12">Lesson 12</string>
    <string name="lesson13">Lesson 13</string>
    <string name="lesson14">Lesson 14</string>
    <string name="lesson15">Lesson 15</string>
    <string name="delete_all_course_title">Delete all course</string>
    <string name="delete_all_course_msg">Are you sure to delete all courses?</string>
    <string name="delete_all_lesson_title">Delete all lesson</string>
    <string name="delete_all_lesson_msg">Are you sure to delete all lessons?</string>
    <string name="delete_examtask_title">Delete all exam and task</string>
    <string name="delete_examtask_msg">Are you sure to delete all exam and task?</string>
    <string name="reset_app_setting_title">Reset app setting</string>
    <string name="reset_app_setting_msg">restore the app setting to default this operation may affect your timetable. Continue?</string>
    <string name="delete_catch_file_title" translatable="false">Delete catch file</string>
    <string name="delete_catch_file_msg" translatable="false">App catch file will deleted. Continue?</string>
    <string name="minute_before_lesson">%d minute before lesson</string>
    <string name="notification_permision_denied">Notification permission not grant</string>
    <string name="time_before_title">Time before</string>
    <string name="before_lesson">%d minute before lesson</string>
    <string name="before_task">%d day before task</string>
    <string name="before_exam">%d day before exam</string>
    <string name="_minute">%d minute</string>
    <string name="_day">%d day</string>
    <string name="_lessons">%d lessons</string>
    <string name="_minutes">%d minutes</string>
    <string name="total_lesson_title">Total lesson in day</string>
    <string name="_lesson">%d Lesson</string>
    <string name="lesson_length_title">Lesson length</string>
    <string name="lesson_break">Lesson Break</string>
    <string name="exam_notification_title">You have %S exam on %s</string>
    <string name="task_notification_title">You have %S task on %s</string>
    <string name="_exam_"> exam </string>
    <string name="_task_"> task </string>
    <string name="did_you_know">Did you know</string>
    <string name="action_card_share_timetable_msg">you can share your timetable to your classmate?</string>
    <string name="try_it">Try it</string>
    <string name="timer_card_now">● Now : %s</string>
    <string name="timer_card_upcoming">● Upcoming : %s</string>
    <string name="no_upcoming_class">No upcoming class</string>
    <string name="no_upcoming_class_message">you have no upcoming class</string>
    <string name="no_upcoming_examtask">No upcoming exam/task</string>
    <string name="try_again">Try again</string>
    <string name="camera_permision_alert">You must grant camera permission to use this service</string>
    <string name="import_setting_">Importing setting…</string>
    <string name="importing_course">Importing course…</string>
    <string name="imported_success">Imported Successfully</string>
    <string name="importing_error">Error when importing data</string>
    <string name="completed">Completed</string>
    <string name="timetable_setting_imported">Timetable setting imported</string>
    <string name="course_data_imported">Course data imported</string>
    <string name="lesson_data_imported">Lesson data imported</string>
    <string name="tryagain">Try again</string>
    <string name="scanning_">Scanning…</string>
    <string name="days_left">\ndays left</string>
    <string name="saved_successfully">Saved Successfully!</string>
    <string name="error_occured">Error Occurred</string>
    <string name="course_ect_empty">Course ECTS is Empty!</string>
    <string name="course_name_empty">Write Course Name!</string>
    <string name="course_view_detail">Course Name  :  %s\nAbbreviation  : %s\nCourse Code  :  %s\nECTS   :  %d\n</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_lesson">Delete Lesson</string>
    <string name="new_exam_">NEW EXAM</string>
    <string name="new_task_">NEW TASK</string>
    <string name="update_exam">UPDATE EXAM</string>
    <string name="update_task">UPDATE TASK</string>
    <string name="select_course_">Select Course</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="lesson_1_min">1 Lesson (%d minutes)</string>
    <string name="lesson_2_min">2 Lesson (%d minutes)</string>
    <string name="lesson_3_min">3 Lesson (%d minutes)</string>
    <string name="lesson_4_min">4 Lesson (%d minutes)</string>
    <string name="add_new_course_">Add new Course</string>
    <string name="error_add_course_frist">Error ! Course not selected</string>
    <string name="automute" tools:ignore="MissingTranslation" translatable="false">Auto-mute</string>
    <string name="tour_four_desc">Shareable  timetable to your classmate easly</string>
    <string name="get_started">Get started</string>
    <string name="tour_rate_app">Please don\'t forget to rate this app on playstore</string>
</resources>