<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/advanced_setting">
        <Preference
            app:icon="@drawable/ic_delete_sweep_red_500_24dp"
            app:key="delete_course"
            app:summary="@string/delete_all_course_summery"
            app:title="@string/delete_all_course" />
        <Preference
            app:icon="@drawable/ic_delete_sweep_red_500_24dp"
            app:key="delete_lesson"
            app:summary="@string/delete_all_lesson_summery"
            app:title="@string/delete_all_lesson" />
        <Preference
            app:icon="@drawable/ic_delete_sweep_red_500_24dp"
            app:key="delete_exam_task"
            app:summary="@string/delete_examtask_summery"
            app:title="@string/delete_exam_task" />
        <Preference
            app:icon="@drawable/ic_restore_deep_purple_a400_24dp"
            app:key="reset_app_setting"
            app:summary="@string/reset_app_setting_summery"
            app:title="@string/reset_app_setting" />
        <Preference
            app:icon="@drawable/ic_delete_sweep_red_500_24dp"
            app:key="clear_catch"
            app:title="@string/clear_catch" />
    </PreferenceCategory>
</PreferenceScreen>
