<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yotor.solution.mytimetable.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="com.yotor.solution.mytimetable.ui.timetable.TimetableFragment"
        android:label="@string/timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.yotor.solution.mytimetable.ui.home.MeFragment"
        android:label="@string/me"
        tools:layout="@layout/me" />
</navigation>