<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/examtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <GridView
        android:padding="20dp"
        android:layout_below="@id/toolbar"
        android:id="@+id/examtask_list"
        android:gravity="center"
        android:stretchMode="columnWidth"
        android:columnWidth="120dp"
        android:listSelector="@null"
        android:numColumns="auto_fit"
        android:horizontalSpacing="40dp"
        android:verticalSpacing="40dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <LinearLayout
        android:layout_below="@id/examtask_list"
        android:id="@+id/empty_examtask_view"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/task_icon"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#7A7878"
            android:text="@string/empty_examtask_desc"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/examtask_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:useCompatPadding="true"
        app:srcCompat="@drawable/ic_add_white_36dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:paddingRight="10dp"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_above="@id/examtask_fab"
        android:id="@+id/examtask_fab_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/task_fab_parent"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:shadowColor="#222"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:text="@string/new_task"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/task_fab"
                android:layout_width="wrap_content"
                app:fabSize="mini"
                app:tint="#eee"
                app:useCompatPadding="true"
                app:srcCompat="@drawable/ic_event_note_blue_24dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/exam_fab_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#222"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:text="@string/new_exam"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/exam_fab"
                android:layout_width="wrap_content"
                app:useCompatPadding="true"
                app:fabSize="mini"
                app:tint="#eee"
                app:srcCompat="@drawable/exam"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
